# learn-opengl-raytrace-weekend

./: .gitmodules  CMakeLists.txt  README.md  build.bat
cmake/: CompilerSettings.cmake  FindG3LOG.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake
libs/: buildlibs.bat
src/: CMakeLists.txt  RaytraceApp.cpp  RaytraceApp.h  StandardOutSink.h  main.cpp
src/helper/: TinyShader.cpp  TinyShader.h  TinyTexture.cpp  TinyTexture.h  glHelper.cpp  glHelper.h
src/shader/: compute.glsl  display_fs.glsl  display_vs.glsl
